syntax = "proto3";
package I.PB;

message R2G_GetLoginKey // IActorRequest
{
  string Account = 1;
  map<int32, L2H_PlayerKickOut> a = 2; // map测试
}

message G2R_GetLoginKey // IActorResponse
{
  int64 Key = 1;
  uint64 GateId = 2;
}

message H2L_PlayerOnline // IActorRequest 注册玩家
{
  uint64 PlayerId = 1;
  uint64 HomeId = 2;
}
message L2H_PlayerOnline // IActorResponse 注册玩家
{}

message L2A_PlayerOnline // IActorMessage 广播玩家在线
{
  uint64 PlayerId = 1;
  uint64 HomeId = 2;
}

message H2L_PlayerOffline // IActorRequest 玩家Offline
{
  uint64 PlayerId = 1;
  uint64 HomeId = 2;
}

message L2H_PlayerOffline // IActorResponse 玩家Offline
{}

message L2A_PlayerOffline // IActorMessage 广播玩家Offline
{
  uint64 PlayerId = 1;
}

message L2H_PlayerKickOut { // IActorRequest 玩家Offline
  uint64 PlayerId = 1;
}
message H2L_PlayerKickOut { // IActorResponse 玩家Offline
}